# rust-accelerator

./: README.md  compose.override.yml  compose.yml
.github/workflows/: prod.yml
auth-service/: .gitignore  Cargo.toml  Dockerfile
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  password.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  hashset_token_store.rs  mod.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
