[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
axum-extra = { version = "0.12.1", features = ["cookie"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = "0.20.0"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
chrono = "0.4.42"
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "cookies"] }
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"